--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "@mediapipe/pose": "^0.5.1635988162",
+    "element-plus": "^2.9.4",
+    "gestalt": "^172.6.0",
+    "gestalt-charts": "^172.6.0",
     "gl-matrix": "^3.4.3",
     "vue": "^3.2.25"
   },
